# cimd-

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  config.example.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  THEOREM13.md
src/: alerter.rs  anomaly_detector.rs  ballot_commitment.rs  ballot_counter.rs  byzantine_analyzer.rs  config.rs  config_validator.rs  consensus_checkpoint.rs  consensus_rounds.rs  error.rs  event_log.rs  finality_checker.rs  intactness_proof.rs  lib.rs  logging.rs  main.rs  metrics.rs  monitor.rs  network.rs  network_health.rs  network_state.rs  node_reachability.rs  quorum_history.rs  quorum_set_builder.rs  quorum_validator.rs  reconfig_impact.rs  reconfiguration.rs  safe_state.rs  simulator.rs  slot.rs  slot_ordering.rs  slot_phase_tracker.rs  state_snapshot.rs  threshold_validator.rs  validation_metrics.rs  validator.rs  validator_set_diff.rs
tests/: integration_test.rs  validator_test.rs
