[package]
name = "cimd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"

[[bin]]
name = "cimd"
path = "src/main.rs"
